2001-12-01  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* src/eval.c src/fit.c src/plot.c src/os2/gclient.c
	config/makefile.os2: Abandon EMX non-standard signal processing
	model. Also avoid calling PM-term functions if it's not running

2001-11-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c src/misc.c src/plot2d.c src/plot3d.c: Allow
	(nearly) any order of options in plot and splot commands. Actually,
	this "any order" applies separately inside the group of options
	- for a datafile [see df_open() in datafile.c]
		every matrix binary index thru using
	- for plot commands [see plot2d.c]
		smooth title notitle axes with
	- for splot commands [see plot3d.c]
		title notitle with

	* src/tables.h src/tables.c: Comment out plot_tbl[] as (1) it has
	not been used for 2 years, (2) if used any later, it will have to
	be split into datafile_tbl[] and plot_tbl[].

2001-11-29  Guillaume Allegre  <Guillaume.Allegre@imag.fr>

	* docs/gnuplot.doc: Fix inconsistency in the document: many examples
	use the 'set no...' syntax instead of the 3.8-new syntax 'unset'.

2001-11-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c: Fix  splot 'a.dat' with ... palette  crash if
	'a.dat' contains a single scan only.

2001-11-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c: Allow any order of options in 'set arrow'.
	Fix default value in 'set label' be 'nopoint'.

	* src/show.c: Fix crash in conv_text() for NULL pointer. Fix
	'show label' for labels with no label text specified.

2001-11-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/misc.c: Allow any order of lt, lw, pal, ps, pt options in
	'with <style> <options>'. Allow the smooth color change of lines,
	points and dots by syntax 'with <style> palette' instead of 
	'with <style> lt palette' (but keep the parser understanding the
	older syntax too).

	* docs/gnuplot.doc: Better documentation for 'with <style> palette'
	in 'with <style>' section. A section for 'lines' added (currently it